--- a/ode.tex
+++ b/ode.tex
@@ -31,7 +31,7 @@ The general solution to a inhomogeneous linear ODE is $y = y_h + y_p$. The solut
 The following follows from the linearity of the DE:
 \begin{compactitem}
     \item If $y_1$ and $y_2$ are two different solutions to an inhomogeneous linear DE, then $y = c_1 \cdot y_1 + c_2 \cdot c_2$ is also a solution.
-    \item If $y_1$ solves the linear DE for RHS $b_1$ and $y_2$ solves the linear DE for RHS $b_2$, then $y_1 + y_2$ solves the linear DE for RHS $b_1 + b_2$.
+    \item Superposition: If $y_1$ solves the linear DE for RHS $b_1$ and $y_2$ solves the linear DE for RHS $b_2$, then $y_1 + y_2$ solves the linear DE for RHS $b_1 + b_2$.
 \end{compactitem}
 
 \subsubsection{Initial Value Problem}
