IMPROVE: Lazy eval description

--- a/00_Introduction.tex
+++ b/00_Introduction.tex
@@ -16,7 +16,10 @@
 
 \subsection{Haskell}
 \begin{itemize}
-    \ides{Lazy Evaluation:} expression evaluates always outermost and leftmost term
+    \ides{Lazy Evaluation:} expression evaluates always leftmost and outermost expression
+        \begin{itemize}
+            \item But pattern matching forces evaluation
+        \end{itemize}
 \end{itemize}
 
 \subsubsection{Syntax}
