NEW: Introduction section

--- a/main.tex
+++ b/main.tex
@@ -4,15 +4,16 @@
 
 \begin{document}
 
-\lhead{Spring 2020}
-\chead{Computer Networks}
-\rhead{\today}
+    \lhead{Spring 2021}
+    \chead{Computer Networks}
+    \rhead{\today}
 
-\title{Computer Networks}
-\author{Jean-Claude Graf}
-\maketitle
+    \title{Computer Networks}
+    \author{Jean-Claude Graf}
+    \maketitle
 
-\tableofcontents
+    \tableofcontents
 
+    \include{./01_Introduction.tex}
 
 \end{document}
