NEW: Section 2 on correctness

--- a/main.tex
+++ b/main.tex
@@ -16,4 +16,5 @@
     \tableofcontents
     \include{./00_Introduction.tex}
     \include{./01_NaturalDeduction.tex}
+    \include{./02_Correctness.tex}
 \end{document}
