NEW: Lazy Evaluation

--- a/main.tex
+++ b/main.tex
@@ -17,4 +17,5 @@
     \include{./00_Introduction.tex}
     \include{./01_NaturalDeduction.tex}
     \include{./02_Correctness.tex}
+    \include{./08_LazyEvaluation.tex}
 \end{document}
