NEW: Section about lists

--- a/main.tex
+++ b/main.tex
@@ -17,5 +17,6 @@
     \include{./00_Introduction.tex}
     \include{./01_NaturalDeduction.tex}
     \include{./02_Correctness.tex}
+    \include{./03_Lists.tex}
     \include{./08_LazyEvaluation.tex}
 \end{document}
