NEW: Section 4 about abstraction

--- a/main.tex
+++ b/main.tex
@@ -18,5 +18,6 @@
     \include{./01_NaturalDeduction.tex}
     \include{./02_Correctness.tex}
     \include{./03_Lists.tex}
+    \include{./04_Abstraction.tex}
     \include{./08_LazyEvaluation.tex}
 \end{document}
