NEW: Section 6 higher order programming

--- a/main.tex
+++ b/main.tex
@@ -19,5 +19,6 @@
     \include{./02_Correctness.tex}
     \include{./03_Lists.tex}
     \include{./04_Abstraction.tex}
+    \include{./05_HigherOrderProgramming.tex}
     \include{./08_LazyEvaluation.tex}
 \end{document}
