NEW: Secton on types

--- a/main.tex
+++ b/main.tex
@@ -20,5 +20,6 @@
     \include{./03_Lists.tex}
     \include{./04_Abstraction.tex}
     \include{./05_HigherOrderProgramming.tex}
+    \include{./06_Types.tex}
     \include{./08_LazyEvaluation.tex}
 \end{document}
