NEW: Section about algebraic data types

--- a/main.tex
+++ b/main.tex
@@ -21,5 +21,6 @@
     \include{./04_Abstraction.tex}
     \include{./05_HigherOrderProgramming.tex}
     \include{./06_Types.tex}
+    \include{./07_AlgebraicDataTypes.tex}
     \include{./08_LazyEvaluation.tex}
 \end{document}
